<resources>
    <string name="app_name">Doct24</string>
    <string name="home">Главная</string>
    <string name="doctors">Врачи</string>
    <string name="meetings">Консультации</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="howWorks">Как работает Doct24</string>
    <string name="askQuestion">Задать вопрос</string>
    <string name="medicineControl">Контролируйте прием ваших лекарств</string>
    <string name="topDoctors">Лучшие врачи</string>
    <string name="events">Cобытия</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="data">Данные</string>
    <string name="documents">Документы</string>
    <string name="settings">Настройки</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="blood_type">Группа крови</string>
    <string name="_180">180</string>
    <string name="_80">80</string>
    <string name="blood">III+</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Allergy">Аллергии</string>
    <string name="Analysis">Анализы и прививки</string>
    <string name="Diseases">Хронические заболевания</string>
    <string name="Surgeries">Перенесенные операции</string>
    <string name="Medicament">Прием препаратов</string>
    <string name="BankCards">Банковские карты</string>
    <string name="References">Справки и больничные листы</string>
    <string name="PayCard">Платежная карта</string>
    <string name="Police">Страховой полис</string>
    <string name="Favorits">Избранное</string>
    <string name="FavoritDocs">Избранные врачи</string>
    <string name="Subscribe">Подписки</string>
    <string name="Support">Поддержка</string>
    <string name="man">Мужчина</string>
    <string name="years">лет</string>
    <string name="e_mail">E-mail:</string>
    <string name="abc_mail_ru">ABC@mail.ru</string>
    <string name="tel">Тел.:</string>
    <string name="_7_775_222_22_22">+7(775)222 22 22</string>
    <string name="medCard">Ведите свою медицинскую карту</string>
    <string name="healthCheck">Фиксируйте показатели самочувствия</string>
    <string name="chatWithDoctors">Общайтесь с любимыми врачами</string>
    <string name="notify">Уведомление</string>
    <string name="notifyText">Приложение находится в разработке. В ближайшее время здесь появится информация.</string>
    <string name="serviceSecureInfo">Подробная информация о безопасности сервиса</string>
    <string name="howDoct24WorksTitle1">Как работает Doct24</string>
    <string name="howDoct24WorksTitle2">Что Вы можете с Doct24?</string>
    <string name="howDoct24WorksText1">Doct24 — это онлайн-консультации 24/7. Квалифицированные врачи всех специальностей проконсультируют Вас по любому интересующему вопросу.
</string>
    <string name="howDoct24WorksText2_1">
        &#8226;️получить консультацию от опытного врача, в нашей команде только лучшие врачи;
    </string>
    <string name="howDoct24WorksText2_2">
        &#8226; обратиться к нам в любое время, без выходных, перерывов и очередей;
    </string>
    <string name="howDoct24WorksText2_3">
        &#8226; связаться с врачом в удобном для Вас формате: в чате или по видеосвязи;
    </string>
    <string name="howDoct24WorksText2_4">
        &#8226; не откладывать консультацию из-за стеснения и неловкости, мы гарантируем полную конфиденциальность Вашего обращения;
    </string>
    <string name="howDoct24WorksText2_5">
        &#8226; быть уверенными в безопасном хранении Вашей медицинской документации;
    </string>
    <string name="howDoct24WorksText2_6">
        &#8226; получить отчет о консультации и все рекомендации в Вашем личном кабинете сразу после завершения приема.
    </string>
    <string name="childrenDoctor">Детский врач</string>
    <string name="adultDoctor">Взрослый врач</string>
    <string name="familyDoctor">Семейный врач</string>
    <string name="backToDoctorsList">Выбор врача</string>
    <string name="backToDoctorProfile">Профиль врача</string>
    <string name="chat">Чат</string>
    <string name="video">Видео</string>
    <string name="availableEntry">Доступная запись</string>
    <string name="seniority">Стаж:</string>
    <string name="education">Образование:</string>
    <string name="experience">Опыт работы:</string>
    <string name="healing">Лечение заболеваний:</string>
    <string name="professionality">Профессионализм</string>
    <string name="responsibility">Ответственность</string>
    <string name="accurasy">Внимательность</string>
    <string name="punctuality">Пунктуальность</string>
    <string name="leaveFeedback">Написать отзыв</string>
    <string name="sendFeedback">Отправить отзыв</string>
    <string name="sign">Записаться</string>
    <string name="appointmentText">Запись</string>
    <string name="aboutDoctor">О враче</string>
    <string name="doctorFeedback">Отзывы(36)</string>
    <string name="doctorAge">Возраст:</string>
    <string name="doctorAgeInput">36</string>
    <string name="doctorName">Петров Александр Федорович</string>
    <string name="doctorSpeciality">Специализация:</string>
    <string name="doctorSpecialityInput">Гастроэнтеролог, аллерголог</string>
    <string name="doctorLocation">Местоположение:</string>
    <string name="doctorLocationInput">Россия, Москва</string>
    <string name="doctorSpecialityBack">Выбор специализации</string>
    <string name="backToHome">На главную страницу</string>
    <string name="doctorProfileEducationInputText">1966 - 1970 гг. - АГМИ г. Алматы, лечебный факультет. \n1970 - 1972 гг. - военно-медицинский факультет при Томском медицинском институте. Военный врач, лечебно-профилактическое дело. \n1977 - 1979 гг. - военно-медицинская академия им. С.М. Кирова, г. Ленинград. Офицер с высшим военным образованием, врач-терапевт. Лечебно-профилактическое обеспечение войск.</string>
    <string name="doctorProfileExperienceInputText">1986-1993 гг. - начальник гастроэнтерологического отделения окружного госпиталя (Алма-Ата) \n1993-1995 гг. - начальник гастроэнтерологического отделения ЦВКГ МО РК (Алматы) \n1995-2003 гг. - начальник эндоскопического отделения ЦВКГ МО РК (Алматы) \n2003-наст. время - гастроэнтеролог-эндоскопист Республиканского клинического госпиталя для инвалидов ВОВ (Алматы) \n2016-наст. время - гастроэнтеролог-эндоскопист GASTROCLINIC.</string>
    <string name="doctorProfileHealingInputText">гастрит (функциональная диспепсия), холецистит, язвенная болезнь желудка, язвенная болезнь двенадцатиперстной кишки, запор, колит, энтероколит, дискенезия желчевыводящих путей (ДЖВП), гастроэзофагеальная рефлюксная болезнь, эзофагит, панкреатит</string>
    <string name="doctorProfileSeniorityInputText">10 лет</string>
</resources>