<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/menu_icon_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/doctorsSpecListFragment"
        android:icon="@drawable/menu_icon_doctors"
        android:title="@string/doctors"
        app:showAsAction="always"/>

    <item
        android:id="@+id/meetingsFragment"
        android:icon="@drawable/menu_icon_meetings"
        android:title="@string/meetings"
        app:showAsAction="always"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/menu_icon_profile"
        android:title="@string/profile"
        app:showAsAction="always"/>
</menu>