<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/defaultPadding">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitStart"
                android:src="@drawable/doctor_profile_bkg" />

            <Space
                android:id="@+id/spaceDoctorFragment"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doctorProfileBackButton"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:text="@string/backToDoctorsList"
                android:textColor="@color/mainGreen"
                android:textSize="@dimen/defTextSize"
                app:icon="@drawable/ic_baseline_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spaceDoctorFragment" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/doctorProfilePhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileBackButton"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/doctorProfileLikeDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/doctorProfilePhoto"
                app:layout_constraintBottom_toBottomOf="@id/doctorProfilePhoto"
                android:src="@drawable/doctor_profile_like_doctor"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/doctorProfileGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.46" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/doctorProfileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/doctorName"
                android:textColor="@color/headlineColor"
                android:textSize="@dimen/titleSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/doctorProfileGuideline"
                app:layout_constraintTop_toTopOf="@id/doctorProfilePhoto" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/doctorProfileAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultPadding"
                android:text="@string/doctorAge"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/doctorProfileGuideline"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileName" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/doctorProfileAgeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultPadding"
                android:text="@string/doctorAgeInput"
                app:layout_constraintStart_toEndOf="@id/doctorProfileAge"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileName" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/doctorProfileSpec"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardMargin"
                android:text="@string/doctorSpeciality"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/doctorProfileGuideline"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileAge" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/doctorProfileSpecInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/doctorSpecialityInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/doctorProfileGuideline"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileSpec" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/doctorProfileLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardMargin"
                android:text="@string/doctorLocation"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/doctorProfileGuideline"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileSpecInput" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/doctorProfileLocationInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/doctorLocationInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/doctorProfileGuideline"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileLocation" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/doctorProfileVewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultPadding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileLocationInput">

                <androidx.viewpager.widget.PagerTabStrip
                    android:id="@+id/doctorProfilePagerTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.viewpager.widget.ViewPager>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doctorProfileAppointment"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointmentText"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/doctorProfileAbout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileVewPager" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doctorProfileAbout"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutDoctor"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/doctorProfileContainer"
                app:layout_constraintEnd_toStartOf="@id/doctorProfileFeedback"
                app:layout_constraintStart_toEndOf="@id/doctorProfileAppointment"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileVewPager" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doctorProfileFeedback"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctorFeedback"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/doctorProfileAbout"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileVewPager" />

            <include
                android:layout_marginTop="10dp"
                android:id="@+id/doctorProfileContainer"
                layout="@layout/fragment_vp_doctor_profile_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/doctorProfileAbout" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</FrameLayout>